test/positive/feature_javadoc.java

/** A Javadoc comment starts with a slash and two asterisks. */

public class feature_javadoc {
    public feature_javadoc() {}
}

