test/negative/IGNOREfeature_implicitintegerconstantcasts.java

class feature_implicitintegerconstantcasts {
  public feature_implicitintegerconstantcasts() {}
  public byte x = /* (byte) */5;
}


